--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -127,13 +127,13 @@
    "outputs": [],
    "source": [
     "# date='20230419';  ver = 'V03'\n",
-    "# date='20230530';  ver = 'V02'   # CAL     **** V02 has old format. ****\n",
-    "# date='20230601';  ver = 'V03'             **** V02 has old format. ****\n",
+    "# date='20230530';  ver = 'V03'   # CAL\n",
+    "# date='20230601';  ver = 'V03'\n",
     "# date='20230712';  ver = 'V03'\n",
     "# date='20230713';  ver = 'V03'\n",
     "# date='20240125';  ver = 'V02'\n",
-    "date='20240822';  ver = 'V02'   # CAL\n",
-    "# date='0';         ver = 'V02'   # Test data\n",
+    "# date='20240822';  ver = 'V02'   # CAL\n",
+    "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
