--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/9/19"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2025/3/31"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -95,19 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0d556f41",
    "metadata": {},
    "outputs": [],
    "source": [
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID07_20231024-0011.cdf',\n",
-    "                  'SID07_20231024-0024.cdf',\n",
-    "                  'SID07_20231024-0034.cdf',\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old2/'\n",
+    "data_name_list = ['SID07_20231024-0011.ccs.cdf',\n",
+    "                  'SID07_20231024-0024.ccs.cdf',\n",
+    "                  'SID07_20231024-0034.ccs.cdf',\n",
     "                 ]\n",
     "\n",
+    "\"\"\"\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID07_Seq07.cdf',\n",
@@ -130,24 +131,27 @@
     "                  'JUICE_L1a_RPWI-HF-SID7_20000108T062545-20000108T062725_V01___TMIDX_00003.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
     "                  'JUICE_L1a_RPWI-HF-SID7_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
     "                  'JUICE_L1a_RPWI-HF-SID7_20000108T064134-20000108T064314_V01___TMIDX_00001.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "                 ]"
+    "                 ]\"\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3d10ac25",
    "metadata": {},
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
     "# 20240126\n",
     "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID7_20240126T092930_V01.cdf']\n",
     "# 202407 -- CO2\n",
     "data_name_list = ['2024/07/06/JUICE_L1a_RPWI-HF-SID7_20240706T023200_V01.cdf',\n",
     "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID7_20240706T124753_V01.cdf',\n",
-    "                 ]"
+    "                 ]\"\n",
+    "\"\"\""
    ]
   },
   {
@@ -230,7 +234,7 @@
     "\n",
     "n_time0 = data.n_time - 1\n",
     "n_block0 = data.N_block[0]\n",
-    "n_length0 = data.N_samp_AUX[0]\n",
+    "n_length0 = data.N_samp[0]\n",
     "freq_center = data.freq_center[0]\n",
     "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")"
    ]
@@ -556,7 +560,7 @@
     "n_num = data.n_time * data.N_block[0]\n",
     "num_1d = np.arange(n_num)\n",
     "auto_corr_2d = np.ravel(data.auto_corr)\n",
-    "auto_corr_2d = auto_corr_2d.reshape(n_num, data.N_samp_AUX[0]).transpose()\n",
+    "auto_corr_2d = auto_corr_2d.reshape(n_num, data.N_samp[0]).transpose()\n",
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
@@ -575,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
