--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/19"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2025/3/31"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -101,11 +101,11 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
     "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -117,11 +117,10 @@
    "outputs": [],
    "source": [
     "# *** Ground data: Ver.2 ***\n",
-    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
-    "data_name_list = ['SID22_20231024-0049.cdf',\n",
-    "                 ]\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old2/'\n",
+    "data_name_list = ['SID22_20231024-0049.ccs.cdf']\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'    # CDF data folder\n",
     "data_name_list = ['SID22_Seq06.cdf',\n",
@@ -220,7 +219,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr: 16    each Length:\", data.N_samp_AUX[0] )"
+    "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr: 16    each Length:\", data.N_samp[0] )"
    ]
   },
   {
@@ -467,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
