--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/10/16"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/3/31"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "# *** CAL set ***\n",
     "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]   0: background   1: CAL     2: all\n",
+    "cal_mode  = 2                           # [Power]     0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -104,10 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIME_mode = 1                           # [RIME rejection]  0: n/a  1: RIME reject\n",
+    "RIME_mode = 0                           # [RIME rejection]  0: n/a  1: RIME reject\n",
     "RFI_mode  = 0                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
     "f_min     = 0                           # [Frequency sel]   max - min\n",
-    "f_max     = 1000                        # [Frequency sel]   max - min"
+    "f_max     = 45000                       # [Frequency sel]   max - min"
    ]
   },
   {
@@ -148,13 +148,13 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
-    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = [#'SID23_20231024-0011.cdf',\n",
-    "                  'SID23_20231024-0024.cdf',    # 0/0/10mVpp \n",
-    "                  'SID23_20231024-0034.cdf',    # 0/0/10mVpp\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old/'\n",
+    "data_name_list = ['SID23_20231024-0011.ccs.cdf',\n",
+    "                  #'SID23_20231024-0024.ccs.cdf',    # 0/0/10mVpp \n",
+    "                  #'SID23_20231024-0034.ccs.cdf',    # 0/0/10mVpp\n",
     "                 ]\n",
+    "\"\"\"\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID23_Seq07.cdf',\n",
