--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/11/6"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/3/31"
    ]
   },
   {
@@ -138,8 +138,8 @@
     "# *** Flight data: Ver.2 ***\n",
     "# date='20240126'\n",
     "# date='20240706'\n",
-    "date='20240819'\n",
-    "# date='0'\n",
+    "# date='20240819'\n",
+    "date='0'\n",
     "ver = 'V02'\n",
     "sid = 20\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
@@ -196,10 +196,11 @@
     "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
     "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
-    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
-    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
-    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
-    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
+    "if (sid==20):\n",
+    "    print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
+    "    print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
+    "    print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
+    "    print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
     "\n",
     "if N_ch0     > 3:   N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if comp_mode > 3:   comp_mode = data.complex[0]\n",
@@ -518,7 +519,9 @@
     "    ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "xlim=[0, n_freq0];  ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
+    "xlim=[0, n_freq0];  ax1.set_xlim(xlim);  ax7.set_xlim(xlim)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim)\n",
     "# ylim=[10**p_raw_min, 10**p_raw_max]; # ax1.set_ylim(ylim)\n",
     "if comp_mode > 0: # Matrix\n",
     "    # ylim=[-10**p_max, 10**p_max];  ax2.set_ylim(ylim)\n",
@@ -686,10 +689,13 @@
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
-    "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
-    "ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8)\n",
+    "ax1.legend(loc='upper right', fontsize=8)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "xlim=[f_min, f_max];  ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
+    "xlim=[f_min, f_max];  ax1.set_xlim(xlim)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax2.set_ylim(ylim)\n",
@@ -743,7 +749,7 @@
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max]\n",
-    "ax1.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); # ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
+    "ax1.set_xlim(xlim) # ; ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); # ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "ylim=[10**p_min, 10**p_max]; \n",
     "ax1.set_ylim(ylim)\n",
     "\n",
@@ -870,8 +876,8 @@
     "        xlim=[t_min0, t_max0]\n",
     "    # E_min = '2024-08-19 20:30:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    # E_max = '2024-08-19 20:37:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
-    "    E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    # E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
     "\n",
