--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/19"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2025/3/31"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -95,15 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c15b82c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
-    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf']"
+    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf']\"\n",
+    "\"\"\""
    ]
   },
   {
@@ -113,11 +115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
-    "data_name_list = ['SID06_20231024-0049.cdf']\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old/'\n",
+    "# data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old2/'\n",
+    "data_name_list = ['SID06_20231024-0049.ccs.cdf']\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'    # CDF data folder\n",
     "data_name_list = ['SID06_Seq06.cdf']\n",
@@ -217,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr:\", data.N_step_AUX[0], \"   each Length:\", data.N_auto_corr[0] )"
+    "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr:\", data.N_step[0], \"   each Length:\", data.N_auto_corr[0] )"
    ]
   },
   {
@@ -584,7 +587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
