--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2025/3/21"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2025/4/4"
    ]
   },
   {
@@ -77,9 +77,9 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -141,9 +141,9 @@
     "# date='20240819';  ver = 'V02'\n",
     "# date='20240820';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
-    "# date='20240823';  ver = 'V02'\n",
+    "date='20240823';  ver = 'V02'\n",
     "# date='20240909';  ver = 'V02'\n",
-    "date='0';         ver = 'V02'   # Test data\n",
+    "# date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -1304,7 +1304,7 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "n0 = 0;  n1 = n_time0//4;   n2 = n_time0-1\n",
+    "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
     "# n0 = 64;  n1 = 65;   n2 = 66\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;       f_max = 2068\n",
