--- a/JUICE-CDF-HF-SID3_simple.ipynb
+++ b/JUICE-CDF-HF-SID3_simple.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a simole QL -- 2024/10/16"
+    "# JUICE RPWI HF SID3 (Full): L1a simole QL -- 2025/4/4"
    ]
   },
   {
@@ -155,8 +155,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# date='20240126';  ver = 'V05'\n",
-    "date='20240823';  ver = 'V01'\n",
+    "# date='20240126';  ver = 'V02'\n",
+    "# date='20240701';  ver = 'V02'\n",
+    "# date='20240706';  ver = 'V02'\n",
+    "# date='20240819';  ver = 'V02'\n",
+    "# date='20240820';  ver = 'V02'\n",
+    "# date='20240822';  ver = 'V02'   # CAL\n",
+    "date='20240823';  ver = 'V02'\n",
+    "# date='20240909';  ver = 'V02'\n",
     "# date='0'\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
@@ -869,7 +875,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -883,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
