--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2025/03/21"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL  for ASW1/2/3 -- 2025/4/6"
    ]
   },
   {
@@ -143,8 +143,8 @@
     "# date='20230712';  ver = 'V03'\n",
     "# date='20230713';  ver = 'V03'\n",
     "# date='20240125';  ver = 'V02'\n",
-    "date='20240822';  ver = 'V02'   # CAL\n",
-    "# date='0';         ver = 'V02'   # Test data\n",
+    "# date='20240822';  ver = 'V02'   # CAL\n",
+    "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -195,15 +195,17 @@
     "f_min1  = data.frequency[0][0][0]; f_max1  = max(np.ravel(data.frequency))\n",
     "N_ch0   = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "\n",
+    "n0 = 1\n",
     "print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0, \"]\")\n",
     "print(\"         Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
     "print(\"f, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
-    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
-    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
-    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
-    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
+    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[n0]), 'stop {:5d} '.format(data.B0_stopf[n0]), 'step {:3d} '.format(data.B0_step[n0]), 'repeat {:2d} '.format(data.B0_repeat[n0]),  'subdiv {:2d}'.format(data.B0_subdiv[n0]), ) \n",
+    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[n0]), 'stop {:5d} '.format(data.B1_stopf[n0]), 'step {:3d} '.format(data.B1_step[n0]), 'repeat {:2d} '.format(data.B1_repeat[n0]),  'subdiv {:2d}'.format(data.B1_subdiv[n0]), ) \n",
+    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[n0]), 'stop {:5d} '.format(data.B2_stopf[n0]), 'step {:3d} '.format(data.B2_step[n0]), 'repeat {:2d} '.format(data.B2_repeat[n0]),  'subdiv {:2d}'.format(data.B2_subdiv[n0]), ) \n",
+    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[n0]), 'stop {:5d} '.format(data.B3_stopf[n0]), 'step {:3d} '.format(data.B3_step[n0]), 'repeat {:2d} '.format(data.B3_repeat[n0]),  'subdiv {:2d}'.format(data.B3_subdiv[n0]), ) \n",
+    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[n0]), 'stop {:5d} '.format(data.B4_stopf[n0]), 'step {:3d} '.format(data.B4_step[n0]), 'repeat {:2d} '.format(data.B4_repeat[n0]),  'subdiv {:2d}'.format(data.B4_subdiv[n0]), ) \n",
+    "\n",
     "#\n",
     "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")"
    ]
