--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2025/03/21"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation for ASW1/2/3 -- 2025/4/6"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "# *** CAL ***\n",
     "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
@@ -146,8 +146,8 @@
     "# date='20230712';  ver = 'V03'\n",
     "# date='20230713';  ver = 'V03'\n",
     "# date='20240125';  ver = 'V02'\n",
-    "date='20240822';  ver = 'V02'   # CAL\n",
-    "# date='0';         ver = 'V02'   # Test data\n",
+    "# date='20240822';  ver = 'V02'   # CAL\n",
+    "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
