--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2025/4/4"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/4/6"
    ]
   },
   {
@@ -141,9 +141,9 @@
     "# date='20240819';  ver = 'V02'\n",
     "# date='20240820';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
-    "date='20240823';  ver = 'V02'\n",
+    "# date='20240823';  ver = 'V02'\n",
     "# date='20240909';  ver = 'V02'\n",
-    "# date='0';         ver = 'V02'   # Test data\n",
+    "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
