--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/3/31"
+    "# JUICE RPWI HF SID4 & 20 (Burst) for ASW1/2/3: L1a QL -- 2025/4/6"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Power range ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
@@ -141,7 +141,7 @@
     "# date='20240819'\n",
     "date='0'\n",
     "ver = 'V02'\n",
-    "sid = 20\n",
+    "sid = 4\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -239,12 +239,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
-    "print(\"Temperature(org): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))\n",
-    "if T_HF  > 199 or T_HF  < -50 or math.isnan(T_HF):\n",
-    "   T_HF  = 25;  data.T_HF_FPGA[:] = math.nan\n",
-    "if T_RWI > 199 or T_RWI < -199 or math.isnan(T_RWI):\n",
-    "   T_RWI = 25;  data.T_RWI_CH1[:] = math.nan;  data.T_RWI_CH2[:] = math.nan\n",
+    "if data.T_HF_FPGA.size < 2:\n",
+    "   T_HF  = data.T_HF_FPGA;              T_RWI = (data.T_RWI_CH1 + data.T_RWI_CH2)/2\n",
+    "else:\n",
+    "   T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
+    "   print(\"Temperature(org): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))\n",
+    "   if T_HF  > 199 or T_HF  < -50 or math.isnan(T_HF):\n",
+    "      T_HF  = 25;  data.T_HF_FPGA[:] = math.nan\n",
+    "   if T_RWI > 199 or T_RWI < -199 or math.isnan(T_RWI):\n",
+    "      T_RWI = 25;  data.T_RWI_CH1[:] = math.nan;  data.T_RWI_CH2[:] = math.nan\n",
     "print(\"Temperature(cal): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))"
    ]
   },
