ASW3: SID-5/21 update with proc/aux/header (SID-6/21/7/23: not yet)

--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/10/16"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2025/4/7"
    ]
   },
   {
@@ -81,8 +81,8 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -183,7 +183,7 @@
     "N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
     "#\n",
-    "N_frequency = data.N_freq[0]\n",
+    "N_frequency = np.int32(data.B0_step[0] * data.B0_subdiv[0] / data.subdiv_reduction[0])\n",
     "N_component = 1;    print(\"       ==> Component:\", N_component)"
    ]
   },
