--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/10/16"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/4/7"
    ]
   },
   {
@@ -82,8 +82,8 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -485,7 +485,9 @@
     "    ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "xlim=[0, n_freq0];  ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
+    "xlim=[0, n_freq0];  ax1.set_xlim(xlim); ax7.set_xlim(xlim)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim)\n",
     "# ylim=[10**p_raw_min, 10**p_raw_max]; # ax1.set_ylim(ylim)\n",
     "if comp_mode > 0: # Matrix\n",
     "    # ylim=[-10**p_max, 10**p_max];  ax2.set_ylim(ylim)\n",
